--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link href="https://unpkg.com/phosphor-icons" rel="stylesheet">
 
     <!-- Vue -->
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
+    <script src="./vue.js"></script>
 
     <!-- Vue Router -->
-    <script src="https://unpkg.com/browse/vue-router@4.2.2/dist/vue-router.global.js"></script>
+    <script src="./vue-router.js"></script>
 
     <!-- Vue Loader -->
-    <script src="https://unpkg.com/http-vue-loader"></script>
+    <script src="./vueloader.js"></script>
 
 </head>
 
