--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vue SPA</title>
 
     <!-- Phosphor Icons -->
-    <link href="https://unpkg.com/phosphor-icons" rel="stylesheet">
+    <!-- <link href="https://unpkg.com/phosphor-icons" rel="stylesheet"> -->
 
     <!-- Vue -->
     <script src="./vue.js"></script>
