--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="./vue-router.js"></script>
 
     <!-- Vue Loader -->
-    <script src="./vueloader.js"></script>
+    <script src="./httpVueLoader.js"></script>
 
 </head>
 
